# senior-project

./: .gitignore  index.0278ea91.js  index.dbc2c145.css  index.dbc2c145.css.map  index.html  package.json
.cargo/: config.toml
client/: .eslintrc.json  Cargo.toml  package.json  tailwind.config.js  tsconfig.json
client/src/: App.tsx  Messages.tsx  Socket.tsx  Thread.tsx  Threads.tsx  index.html  index.tsx  main.rs  store.ts
client/src/app/: App.tsx  Auth.tsx  Connect.tsx  Login.tsx  Main.tsx  router.tsx
client/src/contextMenu/: ContextMenu.tsx  MenuItems.tsx  useContextMenu.ts  useContextMenu.tsx
client/src/messages/: Message.tsx  MessageAuthor.tsx  MessageItem.tsx  Messages.tsx
client/src/nav/: Nav.tsx  NavItem.tsx
client/src/threads/: ThreadContextMenu.tsx  ThreadItem.tsx  Threads.tsx
client/src/users/: User.tsx  UserAvatar.tsx  UserEdit.tsx  Users.tsx
design/: README.md  api_docs.md  data_model.prisma  user_guide.md
server/: .env  .eslintrc.json  .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  curl.sh  default_config.json  package.json  tsconfig.json
server/prisma/: design.prisma  schema.prisma
server/src/: context.rs  events.ts  index.ts  main.rs  messages.ts  threads.ts  user.ts  users.rs  util.rs  ws.rs
server/src/messages/: mod.rs
server/src/threads/: mod.rs
server/src/users/: auth.rs  mod.rs
