[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws", "headers"] }
futures-util = "0.3.24"
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
serde = { version = "1.0.144", features = ["derive"] }
jsonwebtoken = "8.1.1"
